# NauCourse

./: Dockerfile  LICENSE  README.md  build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle  versionConfig.gradle
AppUpdater/: build.gradle
AppUpdater/src/main/: AndroidManifest.xml
NauCourseWear/: build.gradle
NauCourseWear/src/main/: AndroidManifest.xml
NauCourseWear/src/main/res/drawable/: shape_corner_square_item.xml
NauCourseWear/src/main/res/drawable-anydpi/: ic_less.xml  ic_more.xml
NauCourseWear/src/main/res/layout/: activity_main.xml  (+4 more)
NauJwc/: build.gradle
NauJwc/src/main/: AndroidManifest.xml
NauSSO/: build.gradle  proguard-rules.pro
NauSSO/src/main/: AndroidManifest.xml
NetApi/: build.gradle  proguard-rules.pro
NetApi/src/main/: AndroidManifest.xml
RSSReader/src/main/: AndroidManifest.xml
app/: build.gradle  lint.xml  proguard-rules.pro
app/schemas/tool.xfy9326.naucourse.io.db.room.AppDB.AppDataBase/: 1.json
app/schemas/tool.xfy9326.naucourse.io.db.room.CoursesDB.CoursesDataBase/: 1.json  2.json
app/schemas/tool.xfy9326.naucourse.io.db.room.JwcDB.JwcDataBase/: 1.json  2.json
app/schemas/tool.xfy9326.naucourse.io.db.room.NetworkDB.NetworkDataBase/: 1.json  2.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: EULA.txt  LICENSE  LICENSE.txt
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/src/: CryptoUtils.cpp  KeyGenerator.cpp  KeyGenerator.h  RC4.cpp  RC4.h  encryptUtils.cpp
app/src/main/cpp/src/aes/: aes.c  aes.h  base64.c  base64.h
gradle/wrapper/: gradle-wrapper.properties
(+1414 files in other folders)
